// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render a subscript text to match snapshot 1`] = `
<span
  className="fsee-normal tdn-none"
  ref={[Function]}
  style={{}}
>
  H
  <sub
    className="fsee-normal tdn-none dy-inline fse-75 lht-0 pn-relative bm--0p25em"
    ref={[Function]}
    style={{}}
  >
    2
  </sub>
  O
</span>
`;

exports[`should render a superscript text to match snapshot 1`] = `
<span
  className="fsee-normal tdn-none"
  ref={[Function]}
  style={{}}
>
  H
  <sup
    className="fsee-normal tdn-none dy-inline fse-75 lht-0 pn-relative tp--0p5em"
    ref={[Function]}
    style={{}}
  >
    2
  </sup>
  O
</span>
`;

exports[`should render one truncated text line to match snapshot 1`] = `
<span
  className="fsee-normal tdn-underline"
  ref={[Function]}
  style={
    {
      "WebkitBoxOrient": "vertical",
      "WebkitLineClamp": 2,
      "display": "-webkit-box",
      "overflow": "hidden",
    }
  }
>
  Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
</span>
`;

exports[`text to match snapshot 1`] = `
<h1
  className="fsee-normal tdn-line-through fse-36px fwt-700 lht-1p2"
  ref={[Function]}
  style={{}}
>
  Some text here
</h1>
`;
